Adição dos links de geociencias

--- a/app/ibge-dataset.ipynb
+++ b/app/ibge-dataset.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recuperando dados - Estatística\n",
+    "## Recuperando dados de produtos - Estatística\n",
     "\n",
     "Recuperando os dados de estatística"
    ]
@@ -74,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ToolBox.save_sqlite(pd.DataFrame(ibge.gerar_links_estatistica()), './' , 'ibge_estatistica.db', 'links_estatistica')"
@@ -104,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recuperando dados - Geociências\n",
+    "## Recuperando dados de produtos - Geociências\n",
     "\n",
     "Recuperando os dados de geociências"
    ]
@@ -139,6 +137,51 @@
     "## Salvando os dados - SQLite\n",
     "\n",
     "Gera os links de cada uma das páginas de geociências"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ToolBox.save_sqlite(pd.DataFrame(ibge.gerar_links_geociencias()), './' , 'ibge_geociencias.db', 'links_geociencias')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Salvando os dados - CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(ibge.gerar_links_geociencias()).to_csv('ibge_geociencias.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.ibge.gov.br/geociencias-novoportal/organizacao-do-territorio/novo-portal/geociencias/16496-metodos-e-outros-documentos-de-referencia/16496-vocabulario-e-glossarios/16496-dicionario-cartografico.html'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ibge.gerar_links_geociencias()[35]"
    ]
   }
  ],
